# FastSCNN-TensorRT

./: CMakeLists.txt  README.md  fastscnn.cpp  fastscnn.h  gen_wts.py  logging.h
